Fixed FV module

--- a/simulation/index.html
+++ b/simulation/index.html
@@ -128,16 +128,16 @@
                         <input type="number" id="PV" name="PV" placeholder="ex :- 10000">
                      </li>
                      <li class="input-li">
-                        <label for="i" class="cost-labels">Interest Rate :</label>
-                        <input type="number" id="i" name="i" placeholder="ex :- 8">
+                        <label for="i1" class="cost-labels">Interest Rate :</label>
+                        <input type="number" id="i1" name="i1" placeholder="ex :- 8">
                      </li>
                      <li class="input-li">
-                        <label for="n" class="cost-labels">No. of compounding periods per year :</label>
-                        <input type="number" id="n" name="n" placeholder="ex :- 2">
+                        <label for="n1" class="cost-labels">No. of compounding periods per year :</label>
+                        <input type="number" id="n1" name="n1" placeholder="ex :- 2">
                      </li>
                      <li class="input-li">
-                        <label for="t" class="cost-labels">No. of years :</label>
-                        <input type="number" id="t" name="t" placeholder="ex :- 3">
+                        <label for="t1" class="cost-labels">No. of years :</label>
+                        <input type="number" id="t1" name="t1" placeholder="ex :- 3">
                      </li>
                   </ul>
                   <div class="center">
